--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p style="text-align:center">
                 Email: liyiqing_cs[at]163.com/206001870[at]nbu.edu.cn
               </p><p style="text-align:center">
-                 &nbsp;&nbsp;<a href="https://github.com/sayoriaaa">Github</a>&nbsp;&nbsp;<a href="assets/cv.pdf">CV</a>
+                 &nbsp;&nbsp;<a href="https://github.com/sayoriaaa">Github</a>&nbsp;&nbsp;<a href="assets/CV.pdf">CV</a>
                 <!--&nbsp;&nbsp;<a href="https://scholar.google.com/citations?user=liyiqing_cs">Google Scholar</a>-->&nbsp;&nbsp;<a href="https://x.com/sayoriaaa">Twitter</a>&nbsp;&nbsp;<a href="https://www.zhihu.com/people/underdog-61-32">知乎</a>
               </p>
               <p>
