--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News!<!--🔥--></heading>
-
-            <li>2024.07: Won 6th of 22 teams in ACM MM (CCF-A) 2024 Competition: <a href="https://www.zdzheng.xyz/ACMMM2024Workshop-UAV/">UAVs in Multimedia</a>.</li>
-            <li>2024.06: My Bachelor Thesis is evaluated as Outstanding (Top 20%) on EECS Faculty</li>
+            <li>2024.07.30: FINALLY! Our paper: <i>Evaluating Domain Translation Approaches for Drone-Based Geo-Localization in Adverse Weather</i> is accepted by ACM MM 2024 Workshop on <a href="https://www.zdzheng.xyz/ACMMM2024Workshop-UAV/">UAVM</a>.</li>
+            <li>2024.07: Won 6th of 22 teams in ACM MM 2024 Competition: <a href="https://codalab.lisn.upsaclay.fr/competitions/18770#results">Multimedia Drone Satellite Matching Challenge In Multiple-environment</a>   </li>
+            <li>2024.06: My Bachelor Thesis is evaluated as Excellent Thesis (Top 20%) of EECS Faculty.</li>
             <!-- <li>2024.03.28: Participated paddle's <a href="https://pfcclab.github.io/posts/starter-camp">Starter Camp</a> (remote). Work on Complex OP.</li> -->
             <li>2024.03<!--.15-->: Starting my research intern @ ZRIT. Work on UAV related computer vison tasks. </li>
           </td>
@@ -72,13 +72,25 @@
           <td style="padding:20px;width:75%;vertical-align:middle">
               <papertitle>Evaluating Domain Translation Approaches for Drone-Based Geo-Localization in Adverse Weather</papertitle>
               <br>
-              <strong><a href="https://sayoriaaa.github.io">Yiqing Li</a></strong>, <a href="https://ieeexplore.ieee.org/author/211939848888874">Shuke He</a>, Gang Liu, <a href="https://www.linkedin.cn/incareer/in/%E6%99%A8-%E9%87%91-4149a4197">Chen Jin*</a>
+              <strong><a href="https://sayoriaaa.github.io/me">Yiqing Li</a></strong>, <a href="https://ieeexplore.ieee.org/author/211939848888874">Shuke He</a>, <a href="https://www.linkedin.cn/incareer/in/%E6%99%A8-%E9%87%91-4149a4197">Chen Jin*</a>
               <br>
-              <em> in submission. </em>
+              <em> ACM MM 2024 Workshop on <a href="https://www.zdzheng.xyz/ACMMM2024Workshop-UAV/">UAVM</a></em>
               <br>
-              <a href="https://github.com/sayoriaaa/UAVM24-solution">[Project](tbc)</a>
+              <strong><font color=red>Rating: 5 5 8 </font></strong>
               <br>
-              <p>Technical report of our solution for ACMMM 2024 Competition <a href="https://www.zdzheng.xyz/ACMMM2024Workshop-UAV/">UAVs in Multimedia</a></p>
+              <a href="assets/ACMMMW24.pdf">[Paper]</a> 
+              <a href="https://github.com/sayoriaaa/UAVM24-solution">[Code]</a>
+              <br>
+              <p>Technical report of our solution for ACM MM 2024 Competition: <a href="https://codalab.lisn.upsaclay.fr/competitions/18770#results">Multimedia Drone Satellite Matching Challenge In Multiple-environment</a>.</p>
+
+              <details>
+                <summary>Abstract</summary>
+                <ol>
+                  <p>
+                    The UAVs in Multimedia (UAVM) 2024 competition aims to improve the performance of Drone-based Geo-localization task under extreme weather. On the task, we found the simple augmentation on training set can significant improve performance with zero-cost and won the 6th Place among 22 teams on this competition. Furthermore, based on our observations, we propose a domain translation framework to further enhance the performance of any model. We transfer images from a multi-weather domain to a normal domain using GAN and introduce FFM to further reduce computational costs. Our experiments revealed that while this strategy indeed improves image quality, it does not translate into improved recognition accuracy. Thus, while our strategy is supported by experimental evidence, practical methods for achieving performance improvement remain elusive. We hope this report provides valuable insights for developers and researchers in this field.
+                  </p>
+                </ol>
+              </details>
           </td>
       </tr>
 
@@ -104,9 +116,9 @@
           <br>
           Supervised by <a href="https://xzfang.top">Lect. Xianzhong Fang</a>
           <br>
-          <em><strong>Ningbo University</strong> graduation project</em> 
+          <em><strong>Ningbo University</strong> degree project</em> 
           <br>
-          <strong><font color=red>Bachelors Thesis </font></strong>
+          <strong><font color=red>Top 20% Bachelor Thesis </font></strong>
           <br>
           <a href="assets/BachelorThesis.pdf">[Thesis]</a> 
           <a href="https://github.com/sayoriaaa/SMD">[Code]</a>  
